SONAR-8366 Make a consistent permission documentation and checks for api/components WS